tests/errors/bare-variant-ambiguous/main.pa
enum color {
	red
	green
}

enum fruit {
	red
	apple
}

# Bare `red` must be qualified. Two enums declare it and the subject's type
# isn't known here (`c` is a fresh type var), so the help offers both
# `color.red` and `fruit.red`.
def check = fun c {
	if c is red {
		0
	}
}
